modulo_3_AN/3.4/p2/k8s/ms_deployment/db-users-ms.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: db-users-ms
spec:
  selector:
    matchLabels:
      app: db-users-ms
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-users-ms
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql          
---
apiVersion: v1
kind: Service
metadata:
  name: db-users-ms
spec:
  type: NodePort
  selector:
    app: db-users-ms
  ports:
  - port: 3306
