modulo_3_AN/3.4/p2/k8s/ms_deployment/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monolith
    spec:
      securityContext:
         runAsUser: 1000300
      containers:
      - env:
        - name: DATABASE_HOST
          value: db-monolith
        - name: DATABASE_PORT
          value: "3306"
        - name: MYSQL_ROOT_PASSWORD
          value: pass
        - name: DATABASE_SCHEMA
          value: test
        - name: DATABASE_PASS
          value: pass
        - name: MS_URL
          value: http://users-ms:8081/api/v1/users/nick/
        - name: USE_MS_SERVICE
          value: "true"
        image: juaneb/dreyg-jescribanob-monolith
        name: monolith
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  labels:
    app: monolith
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: monolith-port
  selector:
    app: monolith
  type: LoadBalancer
