modulo_3_AN/3.4/p2/k8s/ms_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: split-the-monolith-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: split-the-monolith
    http:
      paths:
      - path: /api/v1/books/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monolith
            port:
              name: monolith-port
      - path: /api/v1/users/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: users-ms
            port:
              name: users-ms-port
      - path: /api/v1/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monolith
            port:
              name: monolith-port
